--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,30 @@
     <artifactId>cucumber-reporting</artifactId>
     <version>3.9.0</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-junit -->
+<dependency>
+    <groupId>info.cukes</groupId>
+    <artifactId>cucumber-junit</artifactId>
+    <version>1.2.5</version>
+    <scope>test</scope>
+</dependency>
+
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-surefire-plugin</artifactId>
+		<version>2.19.1</version>
+			<configuration>
+				<suiteXmlFiles>
+				<!-- TestNG suite XML files -->
+					<suiteXmlFile>C:\Users\Vaio\git\Gittest1\src\test\java\demo1\testng1.xml</suiteXmlFile>
+				</suiteXmlFiles>
+			</configuration>
+	</plugin>
+	</plugins>
+   </build>
   </project>
   
     
